# OurPaint

./: .gitignore  CMakeLists.txt  COPYING_CC_BY_NC  FindLCMS2.cmake  GenerateAppimage.py  Info.plist  Info.plist.in  README  README.md  default_brushes.udf  default_brushes_bak.udf  default_canvases.udf  default_lights.udf  default_pallettes.udf  default_pigments.udf  lin2012xyz2e_1_7sf_calc.ods  ournodes.c  ouroperations.c  ourpaint.c  ourpaint.h  ourshader.cpp  ourstrings.cpp  ourtranslations.c  ourtranslations_es-ES.c  ourtranslations_zh-hans.c
Resources/: 1012-ourpainticon.ourpaint  COPYING
android/: apk_build.cmake  keystore.jks
android/res/values/: strings.xml
android/res/values-zh/: strings.xml
android/src/: AndroidManifest.xml  CMakeLists.txt
profiles/: GenericCMYK.txt  ISOcoated_v2_300_bas.txt
source/OurPaint/: ouroperations.c  ourpaint.c  ourpaint.h
